@@ -1,5 +1,6 @@
 1.10.0 - ????-??-??
   - General changes/additions
+    * New command 'count' in augtool
     * New function 'not(bool) -> bool' for path expressions
   - API changes
     * libfa has now a function fa_json to export an FA as a JSON file, and
